Ingress/AGIC/agic-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: agic-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: aks-helloworld-one 
          servicePort: 80
