Ingress/AGIC/agic-ingress-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agic-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - agic.jye.com
    secretName: tls-secret
  rules:
  - host: agic.jye.com
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld-one
            port: 
              number: 80
        path: /hello-world-one
        pathType: Prefix
